@@ -14,6 +14,7 @@ version 2.10.7:
 	  (Bartosz Brachaczek) (#15329)
 	* Fix UPNP mappings on routers that return empty <URLBase/> elements
 	  in their response. (Ferdinand Stehle) (#15373)
+	* Tcl plugin uses saner, race-free plugin loading.
 
 	Pidgin:
 	* Make Pidgin more friendly to non-X11 GTK+, such as MacPorts' +no_x11
